# djElenor

./: .gitignore  DockerFile  Makefile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt  sample_env.txt
djElenor/: schema.py  settings.py  urls.py
djElenor/account/: admin.py  factory.py  manageres.py  models.py  schema.py  selectors.py  services.py  urls.py  views.py
djElenor/account/migrations/: 0003_alter_user_options_and_more.py  0004_remove_user_username_alter_user_uuid.py  0005_alter_user_language_code_alter_user_uuid.py  0006_remove_user_uuid.py
djElenor/utils/: custom_jwt_payload_handler.py  generate_random_code.py  redis_connection.py  sender.py
docker/db/: Dockerfile  load-extensions-postgres.sh
