[tool.poetry]
name = "djelenor"
version = "0.1.0"
description = ""
authors = ["Mohammadreza <mohammdrezasolo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.3"
aiosignal = "1.3.1"
amqp = "5.2.0"
aniso8601 = "9.0.1"
asgiref = "3.7.2"
async-timeout = "4.0.3"
asyncio = "3.4.3"
attrs = "23.2.0"
babel = "2.14.0"
billiard = "4.2.0"
celery = "5.3.6"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
django = "4.2.10"
django-appconf = "1.0.6"
django-countries = "7.5.1"
django-environ = "0.11.2"
django-graphql-jwt = "0.4.0"
django-js-asset = "2.2.0"
django-measurement = "3.2.4"
django-mptt = "0.16.0"
django-phonenumber-field = "7.3.0"
django-prices = "2.3.0"
django-stubs-ext = "4.2.7"
draftjs-sanitizer = "1.0.0"
enmerkar = "0.7.1"
frozenlist = "1.4.1"
graphene = "3.3"
graphene-django = "3.2.0"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
idna = "3.6"
isodate = "0.6.1"
kombu = "5.3.5"
lxml = "5.2.1"
measurement = "3.2.2"
mpmath = "1.3.0"
multidict = "6.0.5"
oauthlib = "3.2.2"
phonenumbers = "8.13.30"
pillow = "10.2.0"
pillow-avif-plugin = "1.4.2"
platformdirs = "4.2.0"
prices = "1.1.1"
promise = "2.3"
prompt-toolkit = "3.0.43"
psycopg2-binary = "2.9.9"
pyjwt = "2.8.0"
python-dateutil = "2.8.2"
pytz = "2024.1"
requests = "2.31.0"
requests-file = "2.0.0"
requests-toolbelt = "1.0.0"
six = "1.16.0"
sqlparse = "0.4.4"
sympy = "1.12"
text-unidecode = "1.3"
todo = "0.1"
typing-extensions = "4.9.0"
tzdata = "2023.4"
urllib3 = "2.2.1"
vine = "5.1.0"
wcwidth = "0.2.13"
yarl = "1.9.4"
zeep = "4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
